# mpi-sycl

./: CMakeLists.txt  LICENSE  README.md
src/: mpi-sycl.cxx
